main.tf
resource "aws_vpc_ipam_preview_next_cidr" "vpc" {
  region         = var.region
  ipam_pool_id   = var.aws_vpc_ipam_pool
  netmask_length = var.vpc_cidr_netmask
}

################################################################################
# VPC
################################################################################

resource "aws_vpc" "default" {
  region                               = var.region
  enable_dns_hostnames                 = var.enable_dns_hostnames
  enable_dns_support                   = true
  enable_network_address_usage_metrics = true
  ipv4_ipam_pool_id                    = var.aws_vpc_ipam_pool
  ipv4_netmask_length                  = var.vpc_cidr_netmask

  tags = merge({ "Name" = var.name }, var.tags)
}

resource "aws_default_security_group" "workload_vpc" {
  region = var.region
  vpc_id = aws_vpc.default.id
}

################################################################################
# Subnets
################################################################################

resource "aws_subnet" "default" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet }

  region                  = var.region
  availability_zone       = each.value.availability_zone
  cidr_block              = each.value.cidr_block
  map_public_ip_on_launch = each.value.public ? true : false
  vpc_id                  = aws_vpc.default.id

  tags = merge(var.tags, each.value.tags, { "Name" = each.key })
}

resource "aws_route_table" "default" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet }

  region = var.region
  vpc_id = aws_vpc.default.id

  tags = merge({ "Name" = each.key }, var.tags)
}

resource "aws_route_table_association" "default" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet }

  region         = var.region
  subnet_id      = aws_subnet.default[each.key].id
  route_table_id = aws_route_table.default[each.key].id
}

################################################################################
# Internet Gateway
################################################################################

resource "aws_internet_gateway" "default" {
  count = anytrue(var.networks[*].public) ? 1 : 0

  region = var.region
  vpc_id = aws_vpc.default.id

  tags = merge({ "Name" = var.name }, var.tags)
}

resource "aws_route" "internet_gateway" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet if subnet.public }

  region                 = var.region
  route_table_id         = aws_route_table.default[each.key].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default[0].id
}

################################################################################
# NAT Gateway
################################################################################

resource "aws_eip" "nat_gw" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet if subnet.nat_gw }

  region = var.region
  domain = "vpc"

  tags = merge({ "Name" = "nat-gw_${each.key}" }, var.tags)
}

resource "aws_nat_gateway" "public" {
  for_each = { for subnet in local.vpc_subnets : subnet.key => subnet if subnet.nat_gw }

  region        = var.region
  allocation_id = aws_eip.nat_gw[each.key].id
  subnet_id     = aws_subnet.default[each.key].id

  tags = merge({ "Name" = each.key }, var.tags)
}

################################################################################
# Default VPC
################################################################################

resource "aws_default_vpc" "default" {
  #checkov:skip=CKV_AWS_148: "False positive the default VPC is managed by default in the account"
  count = var.manage_default_vpc ? 1 : 0

  region = var.region
  tags   = merge({ "Name" = "default" }, var.tags)
}

resource "aws_default_security_group" "default_vpc" {
  count = var.manage_default_vpc ? 1 : 0

  region = var.region
  vpc_id = aws_default_vpc.default[0].id
}

################################################################################
# Transit Gateway attachment / association / propagation
################################################################################

resource "aws_ec2_transit_gateway_vpc_attachment" "default" {
  count = anytrue(var.networks[*].tgw_attachment) ? 1 : 0

  region                                          = var.region
  appliance_mode_support                          = var.transit_gateway_appliance_mode_support ? "enable" : "disable"
  subnet_ids                                      = [for subnet in local.vpc_subnets : aws_subnet.default[subnet.key].id if subnet.tgw_attachment]
  transit_gateway_default_route_table_association = false
  transit_gateway_default_route_table_propagation = false
  transit_gateway_id                              = var.transit_gateway_id
  vpc_id                                          = aws_vpc.default.id
  tags                                            = { Name = var.name }

  lifecycle {
    ignore_changes = [
      transit_gateway_default_route_table_association, transit_gateway_default_route_table_propagation
    ]
  }
}

resource "aws_ec2_transit_gateway_vpc_attachment_accepter" "default" {
  provider = aws.transit_gateway_account

  count = var.transit_gateway_enable_accepter && anytrue(var.networks[*].tgw_attachment) ? 1 : 0

  region                                          = var.region
  transit_gateway_attachment_id                   = aws_ec2_transit_gateway_vpc_attachment.default[count.index].id
  transit_gateway_default_route_table_association = false
  transit_gateway_default_route_table_propagation = false
  tags                                            = var.tags
}

resource "aws_ec2_transit_gateway_route_table_association" "default" {
  provider = aws.transit_gateway_account

  count = anytrue(var.networks[*].tgw_attachment) ? 1 : 0

  region                         = var.region
  transit_gateway_attachment_id  = aws_ec2_transit_gateway_vpc_attachment.default[0].id
  transit_gateway_route_table_id = var.transit_gateway_route_table_association

  depends_on = [aws_ec2_transit_gateway_vpc_attachment_accepter.default]
}

resource "aws_ec2_transit_gateway_route_table_propagation" "default" {
  provider = aws.transit_gateway_account

  for_each = anytrue(var.networks[*].tgw_attachment) ? var.transit_gateway_route_table_propagation : {}

  region                         = var.region
  transit_gateway_attachment_id  = aws_ec2_transit_gateway_vpc_attachment.default[0].id
  transit_gateway_route_table_id = each.value

  depends_on = [aws_ec2_transit_gateway_vpc_attachment_accepter.default]
}

################################################################################
# Route53 Profiles Association
################################################################################

resource "aws_route53profiles_association" "default" {
  count = var.route53_profiles_association != null ? 1 : 0

  region      = var.region
  name        = var.route53_profiles_association.association_name
  profile_id  = var.route53_profiles_association.profile_id
  resource_id = aws_vpc.default.id

  tags = var.tags
}

################################################################################
# VPC Endpoints
################################################################################

module "vpc_endpoints" {
  source = "./modules/vpc-endpoints"

  count = var.vpc_endpoints != null ? 1 : 0

  region             = var.region
  route53_profile_id = anytrue([for endpoint in values(var.vpc_endpoints.endpoints) : endpoint.centralized_endpoint]) && var.route53_profiles_association != null ? var.route53_profiles_association.profile_id : null
  security_group_ids = length(aws_security_group.vpc_endpoints) > 0 ? [aws_security_group.vpc_endpoints[0].id] : []
  tags               = var.tags
  vpc_id             = aws_vpc.default.id

  endpoints = {
    for key, endpoint in var.vpc_endpoints.endpoints :
    key => merge(endpoint, {
      route_table_ids = endpoint.type == "Gateway" ? flatten([for network in var.networks : [for az in var.availability_zones : aws_route_table.default["${network.name}_${az}"].id] if !network.public]) : null
      subnet_ids      = contains(["Interface", "GatewayLoadBalancer"], endpoint.type) ? flatten([for network in var.networks : [for az in var.availability_zones : aws_subnet.default["${network.name}_${az}"].id] if !network.public]) : []
    })
  }
}

resource "aws_security_group" "vpc_endpoints" {
  #checkov:skip=CKV2_AWS_5: "Security group is attached to VPC endpoints via the vpc-endpoints submodule"
  count = var.vpc_endpoints != null && anytrue([for e in var.vpc_endpoints.endpoints : e.type == "Interface"]) ? 1 : 0

  region      = var.region
  description = "VPC Endpoint Security Group"
  name_prefix = "vpc-endpoints-"
  vpc_id      = aws_vpc.default.id

  tags = merge({ "Name" = "vpc-endpoints" }, var.tags)
}

resource "aws_vpc_security_group_ingress_rule" "vpc_endpoints" {
  count = var.vpc_endpoints != null && anytrue([for e in var.vpc_endpoints.endpoints : e.type == "Interface"]) ? 1 : 0

  region            = var.region
  security_group_id = aws_security_group.vpc_endpoints[0].id
  cidr_ipv4         = aws_vpc.default.cidr_block
  description       = "Allow HTTPS access from VPC CIDR block"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
}
